# ParadigmsML

./: .gitignore  app.py  boot.ps1  design_doc.markdown
modules/functional/: CHANGELOG.md  LICENSE  Tree.hs  functional.cabal
modules/imperative/: CMakeLists.txt  logisticRegression.cpp  logistic_model.txt  main.cpp
modules/logic/: engine.pl  knowledge.pl  main.pl  patient.pl
modules/poo/: activations.ts  brain.ts  index.ts  loss.ts  model.json  package-lock.json  package.json  train.ts  vector.ts
modules/structured/: CMakeLists.txt  knn.c  knn.h  main.cpp
orchestrator/: ml_contract_pb2.py  ml_contract_pb2_grpc.py  orchestrator.py
proto/: ml_contract.grpc.pb.cc  ml_contract.grpc.pb.h  ml_contract.pb.cc  ml_contract.pb.h  ml_contract.proto
test/: test_normalization.py
